<resources>
    <string name="app_name">MAT:IG</string>
    <string name="btn_create_account">Create Account</string>
    <string name="lbl_already_have_acc">Already have an account?</string>
    <string name="btn_login">LOGIN</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_phone_nr">Phone Number</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_again">Type password again</string>
    <string name="btn_stores">Search products</string>
    <string name="userprofile">Userprofile</string>
    <string name="welcome">Welcome</string>
    <string name="update">UPDATE</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="cityprofile">City</string>
    <string name="adress">Address</string>
    <string name="adresshint">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_codehint">Zip code</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birthhint">Date of birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="phonehiny">Phone</string>
    <string name="email">Email</string>
    <string name="emailhint">Email</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="Pass">******</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="tv_text">text</string>
    <string name="user_profile">User Profile</string>
    <string name="somethin_useful">Somethin useful</string>
    <string name="something_useful">something useful</string>
    <string name="notifications">Notifications</string>
    <string name="faq">FAQ</string>
    <string name="search">Search</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="tv_languages">Languages</string>
    <string name="btn_changelang">Apply</string>
    <string name="Search_stores">Search</string>
    <string name="btn_products">Search Stores</string>
    <string name="popul_ra_aff_rer_n_ra_dig"><![CDATA[Popular stores close to you!]]></string>
    <string name="tv_favorites">Favorites</string>
    <string name="btn_del">Add</string>
    <string name="btn_add">Del</string>
    <string name="settings">Settings</string>
    <string name="shopping_list">Shopping list</string>
    <string name="btn_remove_history">Remove from history</string>
    <string name="tv_search_history">Search history</string>
    <string name="purchase_history">Purchase History</string>
    <string name="product_name_here">Product name here</string>
    <string name="add_note_to_shoppinglist">Add Note to shoppinglist</string>
    <string name="add_product">Add product</string>
    <string name="add_personal_note">add personal note</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emails">Email</string>
    <string name="yy_mm_dd">YY/MM/DD</string>
    <string name="passwordet">Password</string>
    <string name="notiser">Notiser</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="tv_register_now">No account? register now!</string>
    <string name="tv_submit">SUBMIT</string>

</resources>