<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_end_color">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_arrow_back_"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:drawablePadding="10dp"
                android:text="@string/user_profile"
                app:drawableLeftCompat="@drawable/ic_baseline_person"
                app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios"
                android:id="@+id/user_profile_TV">
            </TextView>
            <TextView
                android:id="@+id/notification_tab_TV"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:drawablePadding="10dp"
                android:text="@string/notifications"
                app:drawableLeftCompat="@drawable/ic_baseline_notifications"
                app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios">
            </TextView>
            <TextView
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:drawablePadding="10dp"
                android:text="@string/faq"
                app:drawableLeftCompat="@drawable/ic_baseline_question_mark"
                app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios"
                android:id="@+id/faq_tab_TV">
            </TextView>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/Signout_button_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                />

        </LinearLayout>


    </LinearLayout>


</ScrollView>